# 3d-thingy

./: .gitignore  CMakeLists.txt  README.md  buildAndRun.sh  compileMaps.sh
assets/models/: ZombieCity01_Shirt.glb  animated_pistol-v2.glb
cmake/: engine_shaders.cmake
editor/: editor.js  index.html  serve.sh  style.css
maps/: example.evil  example_lights.evil  mansion.evil  mansion.json  mansion_old.json
models/: animated_pistol.glb
shaders/: fs_hud.sc  fs_skinned.sc  fs_triangle.sc  varying.def.sc  vs_debug.sc  vs_hud.sc  vs_skinned.sc  vs_triangle.sc
src/: audio.cpp  audio.hpp  ecs.cpp  ecs.hpp  fps_camera.cpp  hud.cpp  hud.hpp  json_level.cpp  json_level.hpp  level_binary.cpp  level_binary.hpp  level_data.cpp  level_data.hpp  level_loader.cpp  level_loader.hpp  level_mesh.cpp  level_mesh.hpp  main.cpp  physics_world.cpp  physics_world.hpp  shader_program.cpp  shader_program.hpp  texture_loader.cpp  viewmodel.cpp  window.cpp  window.hpp
src/application/: application.cpp  application.hpp
src/engine/: audio.cpp  audio.hpp  hud.cpp  hud.hpp  lit_vertex.hpp  shader_program.cpp  shader_program.hpp  skinned_vertex.hpp  texture_loader.cpp  texture_loader.hpp  window.cpp  window.hpp
src/engine/application/: application.cpp  application.hpp
src/engine/geometry/: primitives.cpp  primitives.hpp
src/engine/physics/: raycast.cpp  raycast.hpp
src/engine/render/: buffers.hpp
src/engine/renderer/: renderer.cpp  renderer.hpp
src/game/: character.hpp  fps_camera.cpp  fps_camera.hpp  main.cpp  physics_world.cpp  physics_world.hpp  viewmodel.cpp  viewmodel.hpp
src/game/level/: json_level.cpp  json_level.hpp  level_binary.cpp  level_binary.hpp  level_data.cpp  level_data.hpp  level_loader.cpp  level_loader.hpp  level_mesh.cpp  level_mesh.hpp
src/geometry/: primitives.cpp  primitives.hpp
src/physics/: raycast.cpp  raycast.hpp
src/render/: buffers.hpp
src/tools/: level_pack.cpp
